all package info added

--- a/com/chrisgalhur/dice_game/service/Player.html
+++ b/com/chrisgalhur/dice_game/service/Player.html
@@ -68,7 +68,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class Player" class="title">Class Player</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">com.chrisgalhur.dice_game.service.Player</div>
+<div class="inheritance">com.chrisgalhur.dice_game.entity.Player</div>
 </div>
 <section class="class-description" id="class-description">
 <hr>
@@ -81,8 +81,8 @@ loadScripts(document, 'script');</script>
 <dt>See Also:</dt>
 <dd>
 <ul class="see-list-long">
-<li><a href="../model/SessionPlayerDTO.html" title="class in com.chrisgalhur.dice_game.model"><code>DTO of this class.</code></a></li>
-<li><a href="../model/SessionPlayer.html" title="class in com.chrisgalhur.dice_game.model"><code>Login and registration process.</code></a></li>
+<li><a href="../model/SessionPlayerDTO.html" title="class in com.chrisgalhur.dice_game.entity"><code>DTO of this class.</code></a></li>
+<li><a href="../model/SessionPlayer.html" title="class in com.chrisgalhur.dice_game.entity"><code>Login and registration process.</code></a></li>
 </ul>
 </dd>
 </dl>
