--- a/com/chrisgalhur/dice_game/dto/AuthResponseDTO.html
+++ b/com/chrisgalhur/dice_game/dto/AuthResponseDTO.html
@@ -68,7 +68,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class AuthResponseDTO" class="title">Class AuthResponseDTO</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">com.chrisgalhur.dice_game.dto.AuthResponseDTO</div>
+<div class="inheritance">com.chrisgalhur.dice_game.response.AuthResponse</div>
 </div>
 <section class="class-description" id="class-description">
 <hr>
